@@ -1,5 +1,5 @@
 .\"
-.\" Sccsid @(#)ln.1	1.10 (gritter) 1/24/05
+.\" Sccsid @(#)ln.1	1.11 (gritter) 2/2/05
 .\" Parts taken from ln(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,7 +32,7 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH LN 1 "1/24/05" "Heirloom Toolchest" "User Commands"
+.TH LN 1 "2/2/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 ln \- make a link
 .SH SYNOPSIS
@@ -81,6 +81,13 @@ If the target file exists,
 an attempt is made to unlink it
 before the new link is created,
 regardless of file permissions.
+This option is ignored with
+.B /usr/5bin/ln
+and
+.B /usr/5bin/s42/ln
+if the
+.I \-s
+option is also given.
 .TP
 .B \-n
 Do not remove an existing target file
