@@ -45,6 +45,7 @@ Release ...
   for the POSIX.1-2001 version.
 * sed: If the input is seekable and the 'q' command is used, the file
   pointer is now left after the last line processed.
+* ln: The -f option is not ignored with the -s option for the POSIX version.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
